# skymarket

./: .env  .env.docker  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
ads/: factories.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
users/: factories.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
